[project]
name = "harp-python"
authors = [
    {name = "Goncalo Lopes", email = "g.lopes@neurogears.org"}
]
description = "A low-level interface to loading binary Harp protocol data"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]
license = {text = "MIT License"}

dependencies = [
    "pydantic-yaml",
    "pandas"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Bug Tracker" = "https://github.com/harp-tech/harp-python/issues"
"Source Code" = "https://github.com/harp-tech/harp-python"

[project.optional-dependencies]
dev = [
    "datamodel-code-generator",
    "black"
]
jupyter = [
    "ipykernel"
]

[build-system]
requires = [
    "wheel",
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["harp*"]

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/LICENSE
  ^/README.md
  | harp/model.py
  | reflex-generator
)
'''
