[project]
name = "harp-python"
authors = [
    {name = "Goncalo Lopes", email = "g.lopes@neurogears.org"}
]
description = "A low-level interface for loading binary Harp protocol data"
readme = "README.md"
requires-python = ">=3.9.0"
dynamic = ["version"]
license = {text = "MIT License"}

dependencies = [
    "pydantic-yaml",
    "pandas"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Bug Tracker" = "https://github.com/harp-tech/harp-python/issues"
"Source Code" = "https://github.com/harp-tech/harp-python"

[project.optional-dependencies]
dev = [
    "datamodel-code-generator",
    "pandas-stubs",
    "pytest",
    "pyright",
    "ruff",
    "codespell"
]

jupyter = [
    "ipykernel",
    "matplotlib"
]

[build-system]
requires = [
    "wheel",
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["harp*"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 108
target-version = "py39"
exclude = [
    "reflex-generator"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [
    ".venv/*",
    "reflex-generator"
]

[tool.codespell]
skip = '.git,*.pdf,*.svg'
ignore-words-list = 'nd'